fixed card overflow

--- a/src/assets/scss/layout/card.scss
+++ b/src/assets/scss/layout/card.scss
@@ -94,8 +94,6 @@ $font-family:"Source Sans Pro", Helvetica, Arial, sans-serif;
 
         .card-footer{
             padding: 0px;
-            margin-left: -30px;
-            margin-right: -30px;
             height: $header-height;
             border-top: 1px solid black transparent;
             border-bottom: 0px !important;
